actualizacion de tituloi

--- a/html5/distintas-etiquetas-y-su-uso.html
+++ b/html5/distintas-etiquetas-y-su-uso.html
@@ -8,7 +8,7 @@
 <body>
     <!-- Encabezado -->
     <header>
-        <h1>Título de la página</h1>
+        <h1>Título de la página de ejemplo utilizando solo HTML5</h1>
         <nav>
             <ul>
                 <li><a href="#">Inicio</a></li>
